# poultry-hunter-app

./: .env  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
public/: index.html  manifest.json  style.css
src/: index.tsx  reportWebVitals.ts  service-worker.ts
src/accounts/: generateAccounts.ts  getaccount.ts  types.ts
src/common/: constants.ts  utils.ts
src/components/: Chart.tsx  mapbox.css  mapbox.ts  mapbox.tsx
src/components/App/: App.css  App.test.tsx  App.tsx
src/components/ConnectWallet/: ConnectWallet.tsx  connectWallet.css
src/components/DistributorsDashboard/: DistributorsDashboard.css  DistributorsDashboard.tsx
src/components/FarmDashboard/: dashboard.tsx  farmdashboard.css
src/components/GettingStarted/: GettingStarted.css  GettingStarted.tsx  GettingStartedDesktop.css  GettingStartedDesktop.tsx
src/components/GettingStartedDesktop/: GettingStartedDesktop.css  GettingStartedDesktop.tsx
src/components/Home/: Home.css  Home.tsx
src/components/OfficerDashboard/: Dashboard.tsx  OfficerDashboard.css
src/components/SellersDashboard/: SellersDashboard.css  SellersDashboard.tsx
src/instructions/: index.ts
src/redux/: store.ts
src/redux/reducers/: reducers.ts
src/schema/: index.ts
src/utils/: checkAccount.ts  filters.ts  toastStyles.ts  utils.ts
