[package]
name = "poultry-hunter"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
crate-type = ["cdylib", "lib"]
